# ArdaCrawler

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build_and_run_tests.ps1  run_main.ps1
include/: Logger.hpp  ThreadPool.hpp  crawler.hpp  downloader.hpp  parser.hpp  thread_pool.hpp
src/: main.cpp
tests/: CMakeLists.txt  logger_test.cpp  thread_pool_test.cpp
